Terminando de implementar banco de dados com sqlite

--- a/AgendaEstudos/appsettings.json
+++ b/AgendaEstudos/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=AgendaEstudos.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
