Terminando de implementar Autenticacao e Autorizacao com JWT

--- a/AgendaEstudos/appsettings.json
+++ b/AgendaEstudos/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "Jwt": {
+    "Audience": "santosfc",
+    "Key": "24vg74v2g784bvg84g8bgv14b7b4h892h7849bvh7424",
+    "Issuer": "santosfc"
+  }
 }
