Realizando diversas modificacoes nos endpoints do Usuario alem de adicionar o endpoint putch e alterar a logica do endpoint de deletar usuario, agora ele apenas deixa o usuario inativo no sistema sem deletar da base de dados

--- a/AgendaEstudos/AgendaEstudos.csproj
+++ b/AgendaEstudos/AgendaEstudos.csproj
@@ -25,4 +25,8 @@
       <None Remove="AgendaEstudos.db-wal" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Enum\Active.cs" />
+    </ItemGroup>
+
 </Project>
