Consumindo o endpoint de login com sucesso

--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -6,4 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AgendaEstudos\AgendaEstudos.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\css\" />
+    </ItemGroup>
+
 </Project>
